# gamejam-may-2026

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: codeql.yml
src/gamejam_may_2026/: __init__.py  camera.py  config.py  constants.py  dungeon.py  enemies.py  game.py  icons.py  main.py  particles.py  perks.py  player.py  projectiles.py  relics.py  rooms.py  sounds.py  ui.py
tests/src/gamejam_may_2026/: test_hello_world.py
