[project]
name = "gamejam-may-2026"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pygame-ce>=2.5.0",
]
authors = [
    { name = "Clement Wang", email = "clementwang.pro@gmail.com" },
]
readme = "README.md"

[project.scripts]
verdant-depths = "gamejam_may_2026.main:main"

[dependency-groups]
dev = [
    "ruff>=0.9.6",
    "pyright>=1.1.394",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "coverage>=7.6.12",
    "pygbag>=0.9.3",
]

[tool.uv]
package = true


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "PIE",  # flake8-pie
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "PL",   # pylint
    "RUF",  # ruff-specific rules
]
ignore = [
    "PLR2004",  # magic values are intentional in game constants
    "PLR0912",  # complex game-loop/boss AI branches are acceptable
    "PLR0913",  # Enemy base class naturally takes many constructor args
    "PLR0915",  # _update_playing is a large state-machine method; acceptable
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "S101", "PLR2004"]
"*.ipynb" = ["ALL"]
# All enemy update() methods share a fixed signature; unused params are intentional
"src/gamejam_may_2026/enemies.py" = ["ARG002"]

[tool.pyright]
include = ["src/gamejam_may_2026"]
exclude = []
strict = []

reportUntypedFunctionDecorator = false
pythonVersion = "3.11"
pythonPlatform = "Linux"

[tool.pytest.ini_options]
testpaths = ["./tests/"]
filterwarnings = []


